<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="27sp"
        android:textColor="#504040"
        android:layout_above="@+id/layout_login_details"
        android:layout_marginBottom="75dp"
        android:text="@string/login_page"
        />


    <LinearLayout
        android:id="@+id/layout_login_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shape_rect"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="7.5dp"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="textMultiLine"
            android:textSize="18.5sp"
            android:hint="@string/email_id" />

        <EditText
            android:id="@+id/passwordL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18.5sp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:inputType="textPassword"
            android:gravity="center_horizontal"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/password" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn_bckgrnd"
            android:text="@string/login"
            android:textColor="#dd258f5e"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00ffffff"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_below="@id/layout_login_details"
        android:layout_marginTop="20dp"
        android:textColor="#80c2ff"
        android:text="@string/not_signed_up_yet_click_here"/>

</RelativeLayout>