<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#56a3afae"
    android:layout_height="match_parent"
    tools:context=".quizActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#008577">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:textColor="#92c6c3"
                android:text="@string/happy_quizzing"
                android:layout_marginStart="10dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/qNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:text="1/5"/>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:layout_marginEnd="10dp"
                android:textColor="#093b36"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/zero"
                android:textColor="#093b36"
                android:textSize="25sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="17sp" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="#000" />

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/option1"
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/option_A"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="@android:color/white"
                    android:background="@drawable/abcd_btn"
                    style="?android:attr/borderlessButtonStyle"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/optionA"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/options_btn"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/answer_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/options_btn"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/option2"
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/option_B"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/abcd_btn"
                    android:gravity="center"
                    android:text="@string/b"
                    android:textColor="#fff"
                    style="?android:attr/borderlessButtonStyle"
                    android:textSize="20sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/optionB"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/options_btn"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/answer_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/options_btn"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/option3"
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/option_C"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/abcd_btn"
                    android:gravity="center"
                    android:text="@string/c"
                    android:textColor="#fff"
                    style="?android:attr/borderlessButtonStyle"
                    android:textSize="20sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/optionC"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/options_btn"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/answer_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/options_btn"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/option4"
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/option_D"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/abcd_btn"
                    android:gravity="center"
                    android:text="@string/d"
                    android:textColor="#fff"
                    style="?android:attr/borderlessButtonStyle"
                    android:textSize="20sp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/optionD"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/options_btn"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="11sp" />

                    <TextView
                        android:id="@+id/answer_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/options_btn"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>